# CodeWhisper

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
landing/: index.html  package.json
landing/pages/: index.tsx  privacy.tsx  terms.tsx
landing/pages/auth/: callback.tsx
landing/pages/checkout/: success.tsx
src/: App.tsx  index.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/binaries/: ocr-helper-x86_64-apple-darwin
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/ocr-helper/: main.swift
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: audio.rs  claude.rs  database.rs  mod.rs  ocr.rs  screen.rs  session.rs  whisper.rs
src-tauri/src/db/: mod.rs
src/components/Auth/: AuthModal.tsx  SettingsModal.tsx
src/components/ChatPanel/: ChatMessage.tsx  ChatPanel.tsx  EmptyChat.tsx
src/components/HintPanel/: HintPanel.tsx
src/components/Onboarding/: OnboardingModal.tsx
src/components/Overlay/: CollapsedBubble.tsx  ExpandedPanel.tsx  OverlayWindow.tsx  TabBar.tsx  TitleBar.tsx
src/components/PatternLibrary/: PatternCard.tsx  (+2 more)
src/data/: patterns.ts
src/hooks/: useInterviewMode.ts  useScreenCapture.ts  useSessionTimer.ts
src/lib/: stripe.ts  supabase.ts  tauri.ts
src/stores/: appStore.ts  sessionStore.ts
src/types/: index.ts
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/migrations/: 20240101000000_init.sql  20240102000000_usage_log.sql
(+8 files in other folders)
